err/pylaf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylaf'...
Compiling './lib/python3.5/site-packages/pylaf/core.py'...
***   File "./lib/python3.5/site-packages/pylaf/core.py", line 105
    print 'Call:(%s.%s)' % (callback.weakref_obj(), callback.method_name)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylaf/ez.py'...
***   File "./lib/python3.5/site-packages/pylaf/ez.py", line 495
    print self.Console.append(gui.Entry,name='1entry',label='entry',component=self,value=0.)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylaf/gui_old.py'...
***   File "./lib/python3.5/site-packages/pylaf/gui_old.py", line 788
    print 'alive'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylaf/kitchen.py'...
***   File "./lib/python3.5/site-packages/pylaf/kitchen.py", line 98
    except SyntaxError: print 'Syntax Error', name
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylaf/mpl.py'...
***   File "./lib/python3.5/site-packages/pylaf/mpl.py", line 468
    a1 = weakref.ref(a1); gc.collect(); print 'a1:', a1
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylaf/recipes'...
Listing './lib/python3.5/site-packages/pylaf/utils'...
Listing './lib/python3.5/site-packages/pylaf/utils/core'...
Compiling './lib/python3.5/site-packages/pylaf/utils/core/observer.py'...
***   File "./lib/python3.5/site-packages/pylaf/utils/core/observer.py", line 43
    print ws1() # このとき、o1a, o1bからの監視によりSubjectは保持されている
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylaf/utils/core/weakvaluelist.py'...
***   File "./lib/python3.5/site-packages/pylaf/utils/core/weakvaluelist.py", line 46
    print abc, defg, hijkl
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pylaf/utils/functions.py'...
***   File "./lib/python3.5/site-packages/pylaf/utils/functions.py", line 26
    print parse_port_args('item')
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylaf/utils/gui'...
Listing './lib/python3.5/site-packages/pylaf/utils/mpl'...
Compiling './lib/python3.5/site-packages/pylaf/vtkext.py'...
***   File "./lib/python3.5/site-packages/pylaf/vtkext.py", line 210
    print self.label.get()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylaf-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
